fix intro background on mobile + nintendo logo size in footer

--- a/src/scss/blocs/intro.scss
+++ b/src/scss/blocs/intro.scss
@@ -2,7 +2,8 @@
   position: relative;
   text-align: center;
   background-image: url("../img/bg-zelda.jpg");
-  @include bcg;
+  background-size: cover;
+  background-position: center;
   color: $white;
   height: 100vh;
   width: 100%;
